--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-GOOGLE_MAPS_API_KEY=AIzaSyD-XB1ySqjv1MsvsmrbKSheT1LyZ4LC_Ko
+GOOGLE_MAPS_API_KEY=**API KEY**
