--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.vpotvin:caldroidx:1.0'
     implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
