--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
 
-    package="com.example.appleaday">
+    package="com.kristinaandalex.appleaday">
 
     <uses-permission android:name="android:permission.INTERNET"
         tools:remove="android:maxSdkVersion"/>
